--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".Activity.BacaActivity"
             android:theme="@style/splash" />
         <activity
+            android:name=".Activity.DetailPendampingActivity"
+            android:theme="@style/splash" />
+        <activity
             android:name=".Activity.DaftarPendampingActivity"
             android:theme="@style/splash" />
         <activity
