--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,12 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.1'
     implementation 'es.voghdev.pdfviewpager:library:1.0.3'
     implementation 'com.github.gcacace:signature-pad:1.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.google.firebase:firebase-messaging:9.0.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.2,0'
+    implementation 'com.github.PhilJay:MPAndroidChart-Realm:v3.0.3@aar'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+
 }
+apply plugin: 'com.google.gms.google-services'
